# fuzzy-eureka

./: Makefile  pyproject.toml
.github/workflows/: test.yaml
app/: exceptions.py  models.py  routes.py  service.py
bruno/fuzzy-eureka/: apaga item.bru  bruno.json  cria item.bru
tests/: test_routes.py  test_service.py
