[project]
name = "fuzzy-eureka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.11",
    "pydantic>=2.10.6",
    "ulid>=1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = [
    "--cov=app",
    "--cov-branch",
]

[tool.ruff]
line-length = 110
lint.select = ["I", "C", "E", "F"]
lint.extend-select = ["I"]

[tool.coverage.report]
show_missing = true